language/move-lang/tests/move_check/borrows/freeze_combo_invalid.exp
error[E07002]: mutable ownership violated
   ┌─ tests/move_check/borrows/freeze_combo_invalid.move:13:9
   │
12 │         if (cond) f = &mut s.f else f = &mut other.f;
   │                       -------- Field 'f' is still being mutably borrowed by this reference
13 │         freeze(s);
   │         ^^^^^^^^^ Invalid freeze.

error[E07002]: mutable ownership violated
   ┌─ tests/move_check/borrows/freeze_combo_invalid.move:20:9
   │
19 │         if (cond) f = &mut s.f else f = &mut s.g;
   │                       --------          -------- Field 'g' is still being mutably borrowed by this reference
   │                       │                  
   │                       Field 'f' is still being mutably borrowed by this reference
20 │         freeze(s);
   │         ^^^^^^^^^ Invalid freeze.

error[E07002]: mutable ownership violated
   ┌─ tests/move_check/borrows/freeze_combo_invalid.move:27:9
   │
26 │         if (cond) x = s else x = other;
   │                       - It is still being mutably borrowed by this reference
27 │         freeze(s);
   │         ^^^^^^^^^ Invalid freeze.

